# openpen

./: .gitignore  docker-compose.yml  readme.md  start.sh
src/backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
src/frontend/: Dockerfile  index.html  package.json  vite.config.js
src/frontend/electron/: main.cjs  preload.cjs
src/frontend/scripts/: dev.sh
src/frontend/src/: App.jsx  TranscribeUtilities.js  index.css
src/frontend/src/components/: AudioRecorder.jsx  LLMPanel.jsx  NotesPanel.jsx  RecordButton.jsx  StatusBar.jsx  TranscriptionPanel.jsx
